    Lambert.
  * RDoc note lists (<tt>label::</tt>) now generate a table with class
    rdoc-list.  Patch by Thierry Lambert.
  * RDoc markup documentation has been moved to RDoc::Markup including notes
    on how to document source code.
  * An RDoc::Require is now always listed at the file level.  Patch by Thierry
    Lambert.
  * RDoc::CodeObjects now know which file they were defined in.
* Bug fixes
  * RDoc::Generator tests no longer require any installed RDoc on Ruby 1.9

=== 2.5.11 / 2010-08-20

* Minor Enhancements
  * Alias comments are now discovered by the C parser.  Reported by Jeremy
    Evans.
  * Removed --all option which is unused in RDoc.  Use the nodoc or
    stopdoc/startdoc directives to suppress documentation instead.

=== 2.5.10 / 2010-08-17

* Minor Enhancements
  * Support rb_singleton_class().  Reported by Jeremy Evans.
  * Support rb_define_private_method() on rb_singleton_class().  Reported by
    Jeremy Evans.

* Bug Fixes
  * Treat non-ASCII RDoc files as text.  Bug #28391 by Kouhei Sutou.
  * Fix potential test failures due to ivar collision.  Bug #28390 by Kouhei
    Sutou.
  * Added duck-typed #aref for RDoc::Attr to RDoc::AnyMethod.  Bug #28375 by
    Erik Hollensbe
  * Fixed method references in HTML output when show_hash is false.
  * Fixed comments with '.' in call-seq in C sources.  Reported by Jeremy
    Evans.
  * RDoc now understands singleton aliases.  Reported by Jeremy Evans.

=== 2.5.9 / 2010-07-06

* Bug Fixes
  * Look up pager correctly.
  * Fixed handling of bullets in verbatim sections.  Partial patch by
    Juha-Jarmo Heinonen.

=== 2.5.8 / 2010-04-27

*NOTE*:

RDoc 2.5 did not save method parameters, so you should upgrade your rdoc-data
gem to a version >= 2.5.3.

To have ri data for core and stdlib you'll need to:

  gem install rdoc-data

then run:

  rdoc-data --install

To have ri data for you gems you'll also need to run:

  gem rdoc --all --overwrite
